--- a/Curso de JavaScript Segunda Parte/css/styles.css
+++ b/Curso de JavaScript Segunda Parte/css/styles.css
@@ -13,4 +13,15 @@
     border-radius: 5px;
     padding: 6px;
     color: #444;
+    font-size: 20px;
+    color: white;
+    background: black;
+}
+
+.container{
+    color: rgb(106, 106, 139);
+}
+
+.container b{
+    color: rgb(180, 53, 42);
 }
